@@ -2,6 +2,8 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745)
+	- fl_contrast() now compares the luminosity of each color
+	  (STR #837)
 	- Fl_Input_ crashed on some platforms when wrapping
 	  international text characters (STR #836)
 	- Fixed some BMP images loading bugs (STR #825)
